root/etc/iptables/iptables.rules
# Generated by iptables-save v1.6.2 on Sat Feb 24 02:54:26 2018
*mangle
:PREROUTING ACCEPT [358:43120]
#:V2RAY_MASK - [0:0]
#-A PREROUTING -m set --match-set gfw dst -j MARK --set-mark 0x1000
#-A PREROUTING -p udp -m set --match-set gfw_net dst -j V2RAY_MASK
#-A PREROUTING -i br0 -p udp -m udp --dport 53 -m string --string "google" --algo bm -j V2RAY_MASK
:INPUT ACCEPT [247:25757]
:FORWARD ACCEPT [174:30660]
:OUTPUT ACCEPT [114:13992]
:POSTROUTING ACCEPT [288:44652]
-A POSTROUTING -o wg0 -p tcp -m tcp --tcp-flags SYN,RST SYN -m tcpmss --mss 1380:65495 -j TCPMSS --set-mss 1380
#-A V2RAY_MASK -d 192.168.0.0/16 -j RETURN
#-A V2RAY_MASK -d 10.0.0.0/8 -j RETURN
#-A V2RAY_MASK -d 172.16.0.0/12 -j RETURN
#-A V2RAY_MASK -p udp -j TPROXY --on-port 10810 --on-ip 0.0.0.0 --tproxy-mark 0x7d0/0xffffffff
COMMIT
# Completed on Sat Feb 24 02:54:26 2018
# Generated by iptables-save v1.6.2 on Sat Feb 24 02:54:26 2018
*nat
:PREROUTING ACCEPT [42:6400]
:INPUT ACCEPT [1:176]
:OUTPUT ACCEPT [1:112]
:POSTROUTING ACCEPT [42:6336]
:V2RAY - [0:0]
#-A PREROUTING -i br0 -p udp -m udp --dport 53 -j DNAT --to-destination 169.254.1.1:5353
-A PREROUTING -i br0 -p udp -m udp --dport 53 -m string --string "google" --algo bm -j DNAT --to-destination 169.254.1.1:5400
-A PREROUTING -i br0 -p udp -m udp --dport 53 -m string --string "youtube" --algo bm -j DNAT --to-destination 169.254.1.1:5400
-A PREROUTING -i br0 -p udp -m udp --dport 53 -m string --string "wikipedia" --algo bm -j DNAT --to-destination 169.254.1.1:5400
-A PREROUTING -i br0 -p udp -m udp --dport 53 -m string --string "steamcommunity" --algo bm -j DNAT --to-destination 169.254.1.1:5400
-A PREROUTING -p tcp -m set --match-set gfw dst -j V2RAY
-A PREROUTING -p tcp -m set --match-set gfw_net dst -j V2RAY
-A OUTPUT -p tcp -d 1.1.1.1 -j V2RAY
-A POSTROUTING -o wg0 -j MASQUERADE
-A V2RAY -d 192.168.0.0/16 -j RETURN
-A V2RAY -d 10.0.0.0/8 -j RETURN
-A V2RAY -d 172.16.0.0/12 -j RETURN
-A V2RAY -p tcp -m mark --mark 0xff -j RETURN
-A V2RAY -p tcp -j REDIRECT --to-ports 10810
COMMIT
# Completed on Sat Feb 24 02:54:26 2018
# Generated by iptables-save v1.6.2 on Sat Feb 24 02:54:26 2018
*filter
:INPUT ACCEPT [13736:2483862]
:FORWARD ACCEPT [177:31055]
:OUTPUT ACCEPT [2447:404688]
COMMIT
# Completed on Sat Feb 24 02:54:26 2018
